# agentic-context-mesh

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTRAINTS.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENGINEERING.md  EVALUATION.md  LICENSE  Makefile  OPERATIONS.md  PRD.md  PRIOR_ART.md  QMD_COMPAT.md  README.md  ROADMAP.md  SECURITY.md  SLO.md  coverage.json  docker-compose.yml  env.example  kairix.example.config.yaml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  qmd-compat-issue-template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  qmd-compat.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark-gate.yml  ci.yml  dependency-review.yml  docker-publish.yml  integration.yml  publish-pypi.yml  qmd-compat.yml  reflib-benchmark-gate.yml
benchmark-results/: README.md  RESULTS.md  contract-baseline.json  reflib-contract-baseline.json  reflib-gold-v3-baseline.json
docker/: .env.example  README.md  docker-compose.yml  entrypoint.sh
docker/vault-agent/: Dockerfile  entrypoint.sh  fetch_secrets.py
docs/: ENGINEERING.md  EVALUATION.md  OPERATIONS.md  ROADMAP.md  agent-usage-guide.md  eval-guide.md  evaluation-methodology.md  open-knowledge-source-directory.md  quality-framework.md  quick-start.md  runbook-r11-post-crawler-eval.md
docs/architecture/: ENGINEERING.md  file-watcher.md  reference-library-spec.md  rerank-cross-encoder.md  retrieval-boost-configuration.md
docs/evaluation/: evaluation-methodology.md  quality-framework.md
docs/getting-started/: connecting-agents.md  quick-start.md
docs/operations/: OPERATIONS.md
docs/planning/: file-watcher.md  rerank-cross-encoder.md  retrieval-boost-configuration.md
docs/project/: ROADMAP.md  sprint-17-summary.md
docs/runbooks/: INDEX.md  how-to-debug-search-ranking.md  how-to-fix-binary-symlink.md  how-to-migrate-entity-store.md  how-to-onboard-new-installation.md  how-to-restart-services.md  how-to-run-benchmark.md  how-to-upgrade-kairix.md  runbook-benchmark-regression.md  runbook-embedding-lag.md  runbook-emergency-recovery.md  runbook-entity-graph-stale.md  runbook-secrets-fetch-failure.md  runbook-vector-search-failure.md
docs/user-guide/: agent-usage-guide.md  eval-guide.md  mcp-tools.md
kairix/: __init__.py  _azure.py  _qmd.py  cli.py  credentials.py  paths.py  secrets.py  text.py  utils.py  worker.py
kairix/benchmark/: SPEC.md  baseline.py  cli.py  dual_runner.py  mock_reflib_retrieval.py  mock_retrieval.py  runner.py  suite.py
kairix/briefing/: __init__.py  cli.py  pipeline.py  sources.py  synthesiser.py  writer.py
kairix/classify/: __init__.py  cli.py  judge.py  router.py  rules.py
kairix/contracts/: __init__.py  briefing.py  embed.py  entities.py  search.py
kairix/contradict/: cli.py  detector.py
kairix/core/: factory.py  protocols.py
kairix/curator/: __init__.py  cli.py  health.py
kairix/db/: __init__.py  fts.py  migrate_qmd.py  scanner.py  schema.py
kairix/embed/: cli.py  date_extract.py  embed.py  recall_check.py  schema.py
kairix/entities/: cli.py  extract.py  graph.py  pipeline.py  reconcile.py  resolver.py  schema.py  seed.py  stop_entities.py  suggest.py  validate.py
kairix/eval/: __init__.py  auto_gold.py  cli.py  constants.py  generate.py  gold_builder.py  hybrid_sweep.py  judge.py  logger.py  metrics.py  monitor.py  reporter.py  schema.py  sweep.py
kairix/graph/: __init__.py  client.py  models.py
kairix/llm/: __init__.py  backends.py  embed_provider.py  protocol.py
kairix/mcp/: cli.py  server.py
kairix/onboard/: __init__.py  check.py  cli.py  ports.py
kairix/reflib/: catalogue.py  cli.py  dedup.py  emit.py  extract.py  filters.py  frontmatter.py  loader.py  markdown.py  normalise.py  resolve.py  sources.py  splitter.py
kairix/research/: __init__.py  graph.py  nodes.py  state.py
kairix/search/: bm25.py  budget.py  cli.py  config.py  config_loader.py  hybrid.py  intent.py  planner.py  rerank.py  rrf.py  vec_index.py  vector.py
kairix/setup/: __init__.py  cli.py  wizard.py
kairix/store/: __init__.py  cli.py  crawler.py  health.py
kairix/summaries/: __init__.py  cli.py  generate.py  loader.py  staleness.py
kairix/temporal/: __init__.py  chunker.py  cli.py  index.py  rewriter.py
kairix/vault/: __init__.py  cli.py  crawler.py  health.py
kairix/wikilinks/: audit.py  cli.py  injector.py  resolver.py
mnemosyne/: __init__.py  _azure.py  _qmd.py  cli.py
mnemosyne/benchmark/: SPEC.md  cli.py  runner.py
qmd_azure_embed/: __init__.py  cli.py  embed.py  recall_check.py  schema.py
reference-library/: CATALOGUE.md  LICENSE-NOTICES.md  README.md
scripts/: analyze_queries.py  audit-date-formats.py  build-eval-gold.py  build-reflib-queries.py  chunk-crm-interactions.py  chunk-daily-files.py  compare-reflib-baseline.py  deploy-vm.sh  deploy.sh  download-additional-sources.sh  download-reference-library.sh  install-neo4j.sh  install.sh  kairix-mcp.service  kairix-wrapper.sh  migrate-domain-structure.py  migrate_entities_v2.py  mine-eval-queries.py  mined-queries-raw.jsonl  normalise-reference-library.py  pre-commit-confidential-check.sh  preflight.sh  prune-entities.py  rebuild-temporal-gold.py  run-benchmark-bm25-phase0.py  run-benchmark-bm25-phase1.py  run-benchmark-hybrid.py  run-benchmark-v2.py  run-bm25-sweep.py  run-reflib-contract.py  run-regression.sh  safe-commit.sh  seed-brief-entities.py  seed-entity-relations.py  seed_aliases.py  validate-entity-stubs.py  verify-search.py
suites/: builder.yaml  contract-suite.yaml  curated-queries-input.yaml  example.yaml  reflib-contract-suite.yaml  reflib-gold-v1.yaml  reflib-gold-v3.yaml  v2-mined-only.yaml  v2-real-world.yaml
tests/: conftest.py  fakes.py  test_paths.py  test_secrets.py  test_worker.py
(+6208 files in other folders)
